[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tome"
version = "1.7.0"
description = "Multi-source research plugin for Claude Code"
authors = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
]
pdf = [
    "pdfplumber>=0.9",
]
full = [
    "matplotlib>=3.7",
    "pdfplumber>=0.9",
]
dev = [
    "ruff>=0.14.13",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["UP017", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src", "."]
addopts = "-v --tb=short --cov=tome --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "bdd: BDD-style tests",
]

[tool.coverage.run]
source = ["src/tome"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
