[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tome"
version = "1.8.1"
description = "Multi-source research plugin for Claude Code"
authors = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.13",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["UP017", "S101"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "PLR2004"]
"tests/conftest.py" = ["F401"]  # Re-exported fixtures

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src", "."]
addopts = "-v --tb=short --cov=tome --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "bdd: BDD-style tests",
]

[tool.coverage.run]
source = ["src/tome"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["leyline.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tome.session"]
disable_error_code = ["no-redef", "misc", "type-arg", "no-any-return"]

[[tool.mypy.overrides]]
module = ["tome.channels.github"]
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = ["tome.synthesis.quality"]
disable_error_code = ["no-any-return", "no-untyped-def", "index"]

[[tool.mypy.overrides]]
module = ["tome.synthesis.ranker"]
disable_error_code = ["no-any-return", "override", "index"]
