# Separate package for hooks enables:
# - Independent testing without loading full memory-palace plugin
# - Isolated dependencies (only pyyaml needed for hooks)
# - Faster CI/CD for hook-only changes
# - Clear separation between hook logic and skill content
[project]
name = "memory-palace-hooks"
version = "1.4.1"
description = "Hooks for memory-palace plugin - URL detection, web content processing, and local doc monitoring"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Claude Night Market" }]
keywords = ["claude-code", "hooks", "memory-palace", "knowledge-management"]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
fast = [
    "xxhash>=3.0",  # 10x faster hashing
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.pytest.ini_options]
testpaths = ["../tests/hooks"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.coverage.run]
source = ["shared"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
